[heap] Memory reducer calls GC with kGCCallbackFlagCollectAllExternalMemory flag.

BUG=chromium:718484

Review-Url: https://codereview.chromium.org/2863943002
Cr-Commit-Position: refs/heads/master@{#45128}